[tool.poetry]
name = "polydown"
version = "0.3.1"
description = "Batch downloader for polyhaven (polyhaven.com)"
authors = ["Gökçe Merdun <agmmnn@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/agmmnn/polydown"
repository = "https://github.com/agmmnn/polydown"
keywords = ["polyhaven", "download", "downloader", "scrape", "hdri", "batch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[tool.poetry.urls]
Changelog = "https://github.com/agmmnn/polydown/releases"
Source = "https://github.com/agmmnn/polydown"
"Bug Tracker" = "https://github.com/agmmnn/polydown/issues"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.30.0"
rich = "^13.3.0"
aiohttp = "^3.8.3"

[tool.poetry.scripts]
polydown = "polydown.__main__:cli"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"

[tool.black]
includes = "polydown"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
