[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polydown"
version = "0.3.2"
description = "Batch downloader for polyhaven (polyhaven.com)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gökçe Merdun", email = "agmmnn@gmail.com"}
]
keywords = ["polyhaven", "download", "downloader", "scrape", "hdri", "batch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32.5",
    "rich>=14.2.0",
    "aiohttp>=3.13.3",
]

[project.urls]
Homepage = "https://github.com/agmmnn/polydown"
Repository = "https://github.com/agmmnn/polydown"
Changelog = "https://github.com/agmmnn/polydown/releases"
"Bug Tracker" = "https://github.com/agmmnn/polydown/issues"

[project.scripts]
polydown = "polydown.__main__:cli"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=7.2.1",
]

[tool.black]
includes = "polydown"
